# cookiecutter-flask-web

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .flaskenv  .gitignore  Makefile  README.md  config.yml.example  pyproject.toml
{{cookiecutter.project_name}}/tests/: test_app.py
{{cookiecutter.project_name}}/{{cookiecutter.pkg_name}}/: api.py  app.py  cors.py  db.py  settings.py  utils.py
{{cookiecutter.project_name}}/{{cookiecutter.pkg_name}}/apps/: admin.py  schema.py  user.py
