[project]
name = "{{ cookiecutter.pkg_name }}"
version = "0.1.0"
description = ""
authors = [{name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"}]
dependencies = [
    "flask>=3.0.3",
    "pyjwt>=2.8.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.7",
    "mypy-extensions>=1.0.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "voluptuous>=0.15.0",
    "pymysql>=1.1.1",
    "ipython>=8.25.0",
]
requires-python = ">=3.12"
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ipdb>=0.13.13",
]

[tool.pdm.scripts]
start = "flask run -p 4000"
ishell = "flask ishell"
